[gd_scene load_steps=2 format=3 uid="uid://j22d5p1pqpts"]

[ext_resource type="Script" path="res://options.gd" id="1_2vp70"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2vp70")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -44.0
offset_right = 276.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="fullscreen" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscreen"

[node name="fullscreen2" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="V-Sync" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "V-Sync"

[node name="V-Sync2" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -174.0
offset_right = 63.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 45
text = "Exit"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/fullscreen2" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/V-Sync2" to="." method="_on_v_sync_2_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
